Improve generic layer API model
